--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.3.0
 certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.1.1
@@ -23,6 +24,7 @@ PyMySQL==1.1.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+requests==2.32.2
 rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
@@ -31,6 +33,7 @@ starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.0
 ujson==5.10.0
+urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
 watchfiles==0.21.0
