dockerized the whole project
add a docker compose for gateway and redis
fixed issue with redis import, renamed the folder in which redis client connection is estblished
fixed the redis set key,  converted the value to string and saved it to the redis

--- a/pokemon_api/docker-compose.yml
+++ b/pokemon_api/docker-compose.yml
@@ -8,10 +8,18 @@ services:
         environment:
             MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
             MYSQL_DATABASE: PokemonDB
+        networks:
+            - pokemon-service
     
-    mypokemonserver:
+    pokemon-api:
         build: .
         depends_on: 
             - mysql_1
         ports:
-            - "5000:5000"
+            - "5001:5001"
+        networks:
+            - pokemon-service
+
+networks:
+    pokemon-service:
+        external: true
